--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 HOST=http://100.X.X.1:5XXX
 PORT=5XXX
+DATABASE_CONNECTION="root@tcp(127.0.0.1:3306)/articles?charset=utf8mb4&parseTime=True&loc=Local"
